--- a/StockApp/Properties/AndroidManifest.xml
+++ b/StockApp/Properties/AndroidManifest.xml
@@ -1,22 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="StockApp.StockApp" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="StockApp.StockApp" android:versionCode="1" android:versionName="1.0" android:installLocation="preferExternal">
+	<uses-sdk android:minSdkVersion="23" />
 	<uses-permission android:name="android.permission.CAMERA" />
-	<application android:allowBackup="true" android:label="@string/app_name" 
-               android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-               android:supportsRtl = "true">
-		<activity android:name=".BarcodeReader.BarcodeFragment"
-              android:label="Barcode Fragment">
+  <uses-feature android:name="android.hardware.camera" />
+	<application android:allowBackup="true"
+               android:label="@string/app_name"
+               android:hardwareAccelerated="true"
+               android:theme="@style/Theme.AppCompat.Light.DarkActionBar" 
+               android:supportsRtl="true">
+    <acitvity
+      android:name=".MainActivity"
+      android:label="Activity Main"
+      >
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>     
+    </acitvity>
+    
+		<activity android:name=".BarcodeFragment" android:label="Barcode Fragment">
+      
     </activity>
-    <activity android:name=".BarcodeReader.BarcodeFragmentActivity"
-              android:label="Activity Barcode"
-              android:parentActivityName=".BarcodeReader.BarcodeFragment">
-      <meta-data
-        android:name="android.support.PARENT_ACTIVITY"
-        android:value=".BarcodeReader.BarcodeFragmentActivity"
-        >
-        
-      </meta-data>
-    </activity>
+		<activity android:name=".BarcodeFragmentActivity" android:label="Activity Barcode" android:parentActivityName=".barcodeFragment">
+			<meta-data android:name="android.support.PARENT_ACTIVITY" android:value=".barcodeFragmentActivity"></meta-data>
+		</activity>
 	</application>
 </manifest>
