New Error, Old Error Fixed
Unhandled Exception:

System.NotSupportedException: Constructing instances of generic types from Java is not supported, as the type parameters cannot be determined. occurred

--- a/StockApp/Properties/AndroidManifest.xml
+++ b/StockApp/Properties/AndroidManifest.xml
@@ -8,6 +8,12 @@
                android:hardwareAccelerated="true"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar" 
                android:supportsRtl="true">
+    <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+    <meta-data
+        android:name="com.google.android.gms.vision.DEPENDENCIES"
+        android:value="barcode" />
     <acitvity
       android:name=".MainActivity"
       android:label="Activity Main"
