--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -144,6 +144,9 @@
     <AndroidResource Include="Resources\layout\Barcode_Capture.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\layout\layout1.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\Strings.xml">
