--- a/StockApp/Properties/AndroidManifest.xml
+++ b/StockApp/Properties/AndroidManifest.xml
@@ -7,7 +7,8 @@
                android:label="@string/app_name"
                android:hardwareAccelerated="true"
                android:theme="@style/Theme.AppCompat.Light.DarkActionBar" 
-               android:supportsRtl="true">
+               android:supportsRtl="true"
+               android:largeHeap="true">
     <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
