--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -118,7 +118,7 @@
     <Compile Include="BarcodeReader\BacrodeGraphicTracker.cs" />
     <Compile Include="FlashDeck\FlashCardDeck.cs" />
     <Compile Include="HTTP\HttpPost.cs" />
-	<Compile Include="StockItems\ItemsFragment.cs" />
+    <Compile Include="StockItems\ItemsFragment.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="UI\CameraSource.cs" />
     <Compile Include="UI\CameraSourcePreview.cs" />
@@ -145,6 +145,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\Barcode_Capture.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\Fragment_ItemsMain.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
