--- a/StockApp/Properties/AndroidManifest.xml
+++ b/StockApp/Properties/AndroidManifest.xml
@@ -2,27 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="StockApp.StockApp" android:versionCode="1" android:versionName="1.0" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="23" />
 	<uses-permission android:name="android.permission.CAMERA" />
-  <uses-feature android:name="android.hardware.camera" />
-	<application android:allowBackup="true"
-               android:label="@string/app_name"
-               android:hardwareAccelerated="true"
-               android:theme="@style/Theme.AppCompat.Light.DarkActionBar" 
-               android:supportsRtl="true"
-               android:largeHeap="true">
-    <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-    <meta-data
-        android:name="com.google.android.gms.vision.DEPENDENCIES"
-        android:value="barcode" />
-    <acitvity
-      android:name=".MainActivity"
-      android:label="Activity Main"
-      >
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
-        <category android:name="android.intent.category.LAUNCHER" />
-      </intent-filter>     
-    </acitvity>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-feature android:name="android.hardware.camera" />
+	<application android:allowBackup="true" android:label="@string/app_name" android:hardwareAccelerated="true" android:theme="@style/Theme.AppCompat.Light.DarkActionBar" android:supportsRtl="true" android:largeHeap="true">
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+		<meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode" />
+		<acitvity android:name=".MainActivity" android:label="Activity Main">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</acitvity>
 	</application>
 </manifest>
