--- a/StockApp/Properties/AndroidManifest.xml
+++ b/StockApp/Properties/AndroidManifest.xml
@@ -13,5 +13,12 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</acitvity>
+    <activity android:name=".StockItems.ItemsDetailedActivity"
+          android:parentActivityName=".StockItems.StockItem_Fragment" >
+      <!-- The meta-data tag is required if you support API level 15 and lower -->
+      <meta-data
+          android:name="android.support.PARENT_ACTIVITY"
+          android:value=".StockItems.StockItem_Fragment"/>
+    </activity>
 	</application>
 </manifest>
