--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -122,10 +122,10 @@
     <Compile Include="BarcodeReader\BarcodeGraphic.cs" />
     <Compile Include="BarcodeReader\BarcodeTrackerFactory.cs" />
     <Compile Include="BarcodeReader\BacrodeGraphicTracker.cs" />
-    <Compile Include="FlashDeck\FlashCardDeck.cs" />
     <Compile Include="HTTP\IActivityResponse.cs" />
     <Compile Include="HTTP\RootJson.cs" />
     <Compile Include="HTTP\HttpPost.cs" />
+    <Compile Include="StockItems\ItemsDetailedActivity.cs" />
     <Compile Include="StockItems\ItemsArrayAdapter.cs" />
     <Compile Include="StockItems\ItemsFragment.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
@@ -163,6 +163,9 @@
       <SubType>Designer</SubType>
     </AndroidResource>
     <AndroidResource Include="Resources\layout\StockItem_Fragment.axml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+    <AndroidResource Include="Resources\layout\StockItem_Detailed.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
   </ItemGroup>
