--- a/StockApp/packages.config
+++ b/StockApp/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
@@ -69,4 +70,5 @@
   <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Vision" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="monoandroid71" />
 </packages>
