Almost Ready To Release
Detailed Description is working,
Barcode Detection is working
Add/Remove Radio buttons added
Currently not getting a return from the server on adding new product.

--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -143,9 +143,9 @@
     <Compile Include="StockItems\ItemsArrayAdapter.cs" />
     <Compile Include="StockItems\ItemsFragment.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
-    <Compile Include="UI\CameraSource.cs" />
-    <Compile Include="UI\CameraSourcePreview.cs" />
-    <Compile Include="UI\GraphicOverlay.cs" />
+    <Compile Include="BarcodeReader\UI\CameraSource.cs" />
+    <Compile Include="BarcodeReader\UI\CameraSourcePreview.cs" />
+    <Compile Include="BarcodeReader\UI\GraphicOverlay.cs" />
     <Compile Include="ViewPagerAdapter.cs" />
     <Compile Include="ViewPagerFragment.cs" />
     <Compile Include="MainActivity.cs" />
