--- a/StockApp/Properties/AndroidManifest.xml
+++ b/StockApp/Properties/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-feature android:name="android.hardware.camera" />
-	<application android:allowBackup="true" android:label="@string/app_name" android:hardwareAccelerated="true" android:theme="@style/Theme.AppCompat.Light.DarkActionBar" android:supportsRtl="true" android:largeHeap="true">
+	<application android:name=".StockAppApplicaiton" android:allowBackup="true" android:label="@string/app_name" android:hardwareAccelerated="true" android:theme="@style/Theme.AppCompat.Light.NoActionBar" android:supportsRtl="true" android:largeHeap="true" >
 		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
 		<meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="barcode" />
 		<acitvity android:name=".MainActivity" android:label="Activity Main">
