--- a/StockApp/packages.config
+++ b/StockApp/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
+  <package id="Google.Apis" version="1.29.2" targetFramework="monoandroid71" />
+  <package id="Google.Apis.Auth" version="1.29.2" targetFramework="monoandroid71" />
+  <package id="Google.Apis.Core" version="1.29.2" targetFramework="monoandroid71" />
+  <package id="Microsoft.CSharp" version="4.4.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
+  <package id="NETStandard.Library" version="2.0.0" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid71" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid71" />
@@ -12,6 +15,7 @@
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Console" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Diagnostics.Process" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Globalization" version="4.3.0" targetFramework="monoandroid71" />
@@ -23,13 +27,15 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="monoandroid71" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Net.Requests" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Reflection.TypeExtensions" version="4.4.0" targetFramework="monoandroid71" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="monoandroid71" />
@@ -42,7 +48,7 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="monoandroid71" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid71" />
@@ -66,8 +72,11 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.4.0.2" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.7" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Auth" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Auth.Base" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Identity" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="Xamarin.GooglePlayServices.Vision" version="42.1021.1" targetFramework="monoandroid71" />
   <package id="ZXing.Net.Mobile" version="2.2.9" targetFramework="monoandroid71" />
